# oas-client

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
oas_client/: __main__.py  client.py  constants.py  exceptions.py  openapi.py  parameters.py  parser.py  schemas.py  types.py  utils.py
oas_client/renderers/: client.py  params.py  queries.py  requests.py  responses.py
oas_client/templates/: client.jinja2  schemas.jinja2
